<resources>
    <string name="app_name">Working Contacts</string>
    <string name="feed">Feed</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_post_button_description">Add post button</string>
    <string name="add_event_button_description">Add event button</string>
    <string name="name_field">Name</string>
    <string name="password_field">Password</string>
    <string name="re_password_field">Repeat password</string>
    <string name="log_in_button">Log in</string>
    <string name="login_field">Login</string>
    <string name="registration_button">Registration</string>
    <string name="log_in_head_card">Log In</string>
    <string name="sign_in_head_card">Sign In</string>
    <string name="authorization_button">Authorization</string>
    <string name="Sign_in">Sign in</string>
    <string name="photo_error">Pock photo error</string>
    <string name="share_button">Share</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="chooser_share_post">Share post</string>
    <string name="chooser_share_event">Share event</string>
    <string name="empty_posts">there are no posts</string>
    <string name="retry_loading">retry</string>
    <string name="post_text">Enter text</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="add_photo">Add photo</string>
    <string name="add_audio">Add audio</string>
    <string name="add_video">Add video</string>
    <string name="skip">Skip</string>
    <string name="error_loading">loading error</string>
    <string name="jobs">Jobs</string>
    <string name="empty_jobs">jobs is empty</string>
    <string name="to">to</string>
    <string name="from">from</string>
    <string name="speakers">speakers</string>
    <string name="job">Job</string>
    <string name="name_job">name</string>
    <string name="position">position</string>
    <string name="start">start</string>
    <string name="finish">finish</string>
    <string name="link">link</string>
    <string name="save">save</string>
    <string name="post">Post</string>
    <string name="content">Content</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="need_permission">need permission</string>
    <string name="zoom_in">zoom in</string>
    <string name="zoom_out">zoom out</string>
    <string name="search_my_location">search my location</string>
    <string name="event">Event</string>
    <string name="data_time">Data and time</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="type_of_event">Type of event</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="mentions">mentions</string>
    <string name="participants">participants</string>
    <string name="auth_error">Auth error</string>
    <string name="sign_in_to_your_account">Sign In to your account</string>
    <string name="Sign_up">Sign up</string>
    <string name="Cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="passwords_are_different">Passwords are different</string>
    <string name="user_s_photo_upload">User\'s photo upload</string>
    <string name="add_your_photo">Add your photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="posts">Posts</string>
    <string name="till_now">till now</string>
    <string name="check_fields">check fields</string>
    <string name="select_date">Select date</string>
    <string name="time_field_format">%02d:%02d</string>
    <string name="latitude_and_longitude">latitude: %s\nlongitude: %s</string>
    <string name="period_start_till_now">from %s\ till now</string>
    <string name="period_start_and_finish">from %s\ to %s</string>
    <string name="unknown_item_type">unknown item type</string>
    <string name="coordinates">Coordinates</string>
    <string name="added_speaker">Added speaker %s</string>
    <string name="added_mention_of">Added mention of %s</string>
</resources>