<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/page_maps"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.map.ui.MapFragment">

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@id/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/baseline_add_24"
        tools:ignore="ImageContrastCheck,RedundantDescriptionCheck"
        android:contentDescription="@string/zoom_in" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@id/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plus"
        app:srcCompat="@drawable/baseline_remove_24"
        tools:ignore="RedundantDescriptionCheck"
        android:contentDescription="@string/zoom_out" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_my_location_24"
        tools:ignore="RedundantDescriptionCheck"
        android:contentDescription="@string/search_my_location" />
</androidx.constraintlayout.widget.ConstraintLayout>